[gd_scene load_steps=14 format=3 uid="uid://dg65qk514hkh"]

[ext_resource type="Texture2D" uid="uid://l27b0an7xch5" path="res://Bg.png" id="1_evvns"]
[ext_resource type="Script" uid="uid://dx8bsq61fwqye" path="res://sprite_2d.gd" id="2_1ap6j"]
[ext_resource type="FontFile" uid="uid://b0yp0hrk53cxu" path="res://Minecraft.ttf" id="2_yq54j"]
[ext_resource type="Script" uid="uid://8scjxru47tuu" path="res://player.gd" id="3_1ap6j"]
[ext_resource type="Script" uid="uid://c2h220aual1yh" path="res://cpu.gd" id="4_8c340"]
[ext_resource type="Script" uid="uid://bcdr2sg6rqk0x" path="res://bola.gd" id="4_qn35j"]
[ext_resource type="Script" uid="uid://co1lmwl80j7xm" path="res://player_2.gd" id="6_45nkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ap6j"]
size = Vector2(15, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qn35j"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8c340"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45nkh"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysdx3"]
size = Vector2(64, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8pok"]
size = Vector2(64, 648)

[node name="Jogo" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_evvns")
centered = false
script = ExtResource("2_1ap6j")

[node name="Player" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(50, 324)
script = ExtResource("3_1ap6j")

[node name="ColorRect" type="ColorRect" parent="Sprite2D/Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 15.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Player"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_1ap6j")

[node name="Player2" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(1082, 324)
script = ExtResource("6_45nkh")

[node name="ColorRect" type="ColorRect" parent="Sprite2D/Player2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 15.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Player2"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_1ap6j")

[node name="CPU" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(1082, 324)
script = ExtResource("4_8c340")

[node name="ColorRect" type="ColorRect" parent="Sprite2D/CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 15.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/CPU"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_1ap6j")

[node name="Bola" type="CharacterBody2D" parent="Sprite2D"]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_qn35j")

[node name="ColorRect" type="ColorRect" parent="Sprite2D/Bola"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Bola"]
shape = SubResource("RectangleShape2D_qn35j")

[node name="Bordas" type="StaticBody2D" parent="Sprite2D"]
collision_layer = 2

[node name="Cima" type="CollisionShape2D" parent="Sprite2D/Bordas"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_8c340")

[node name="Baixo" type="CollisionShape2D" parent="Sprite2D/Bordas"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_45nkh")

[node name="Esquerda" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Esquerda"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_ysdx3")

[node name="Direita" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Direita"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_t8pok")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="pontos player 1" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("2_yq54j")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPU" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 8.0
offset_right = 688.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("2_yq54j")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Sprite2D/Esquerda" to="Sprite2D" method="_on_esquerda_body_entered"]
[connection signal="body_entered" from="Sprite2D/Direita" to="Sprite2D" method="_on_direita_body_entered"]
[connection signal="timeout" from="Timer" to="Sprite2D" method="_on_timer_timeout"]
